Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "4      0            373450   8.0500        S  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,8 +630,7 @@
     }
    ],
    "source": [
-    "# Your code here\n",
-    "plt.hist(df[\"Age\"], bins = 80)"
+    "# Your code here\n"
    ]
   },
   {
