Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -618,7 +618,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df[]"
    ]
   },
   {
