Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -691,7 +691,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df['Age'].fillna(value=df.Age.median())"
+    "dfdf['Age'].fillna(value=df.Age.median())"
    ]
   },
   {
