--- a/index.ipynb
+++ b/index.ipynb
@@ -614,13 +614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Age = df['Age'].fillna(value=df.Age.median())\n",
-    "df.Age.describe()"
+    "df.Age = df['Age'].fillna(value=df.Age.median())\n"
    ]
   },
   {
