Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -619,7 +619,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Age = df['Age'].fillna(value=df.Age.median())\n"
+    "df.Age = df['Age'].fillna(value=df.Age.median())\n",
+    "df.Age.plot"
    ]
   },
   {
