--- a/index.ipynb
+++ b/index.ipynb
@@ -620,7 +620,7 @@
    "source": [
     "# Your code here\n",
     "df.Age = df['Age'].fillna(value=df.Age.median())\n",
-    "df.Age.plot"
+    "df.Age.plot(kind='hist', bins = )"
    ]
   },
   {
