Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -642,7 +642,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.Age = df['Age'].fillna(value=df.Age.median())\n",
+    "df['Age'].fillna(value=df.Age.median())\n",
     "df.Age.plot(kind='hist', bins = 80)"
    ]
   },
