Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -614,23 +614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['Adf['Age'].fillna(value=df.Age.median()).isna().sum()\n",
+    "df['Age']=df['Age'].fillna(value=df.Age.median()).isna().sum()\n",
     "# df.Age.plot(kind='hist', bins = 80)"
    ]
   },
