Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -614,12 +614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df['Age']=df['Age'].fillna(value=df.Age.median()).isna().sum()\n",
+    "df['Age']=df['Age'].fillna(value=df.Age.median())\n",
     "# df.Age.plot(kind='hist', bins = 80)"
    ]
   },
