Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "df.he"
    ]
   },
   {
