Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -782,14 +782,14 @@
        "1      0   PC 17599  71.2833   C85        C  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.drop(columns='Cabin')\n",
+    "df = df.drop(columns='Cabin')\n",
     "df.head(2)"
    ]
   },
