--- a/index.ipynb
+++ b/index.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,6 @@
        "      <th>Parch</th>\n",
        "      <th>Ticket</th>\n",
        "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -745,7 +744,6 @@
        "      <td>0</td>\n",
        "      <td>A/5 21171</td>\n",
        "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -761,7 +759,6 @@
        "      <td>0</td>\n",
        "      <td>PC 17599</td>\n",
        "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -777,12 +774,12 @@
        "0                            Braund, Mr. Owen Harris    male    0      1   \n",
        "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female    0      1   \n",
        "\n",
-       "   Parch     Ticket     Fare Cabin Embarked  \n",
-       "0      0  A/5 21171   7.2500   NaN        S  \n",
-       "1      0   PC 17599  71.2833   C85        C  "
+       "   Parch     Ticket     Fare Embarked  \n",
+       "0      0  A/5 21171   7.2500        S  \n",
+       "1      0   PC 17599  71.2833        C  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
