Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -821,7 +821,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.Embarked.unique()"
+    "df.Embarked.unique(), df.Sex.Un"
    ]
   },
   {
