Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -805,23 +805,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['S', 'C', 'Q', nan], dtype=object)"
+       "(array(['S', 'C', 'Q', nan], dtype=object),\n",
+       " array(['male', 'female'], dtype=object))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.Embarked.unique(), df.Sex.Un"
+    "df.Embarked.unique(), df.Sex.unique(), df."
    ]
   },
   {
