--- a/index.ipynb
+++ b/index.ipynb
@@ -822,7 +822,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "df.Embarked.unique(), df.Sex.unique(), df.Pclass.unique(),"
+    "df.Embarked.unique(), df.Sex.unique(), df.Pclass.unique(), df.Survived"
    ]
   },
   {
