--- a/index.ipynb
+++ b/index.ipynb
@@ -805,24 +805,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array(['S', 'C', 'Q', nan], dtype=object),\n",
-       " array(['male', 'female'], dtype=object))"
+       " array(['male', 'female'], dtype=object),\n",
+       " array(['3', '1', '2', '?'], dtype=object),\n",
+       " array([0, 1]))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.Embarked.unique(), df.Sex.unique(), df.Pclass.unique(), df.Survived"
+    "df.Embarked.unique(), df.Sex.unique(), df.Pclass.unique(), df.Survived.unique()"
    ]
   },
   {
