Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -842,7 +842,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df.pc"
    ]
   },
   {
