--- a/index.ipynb
+++ b/index.ipynb
@@ -843,7 +843,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Pclass."
+    "df.Pclass.value_counts(norma)"
    ]
   },
   {
