Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -838,12 +838,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    0.526375\n",
+       "1    0.225589\n",
+       "2    0.193042\n",
+       "?    0.054994\n",
+       "Name: Pclass, dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "df.Pclass.value_counts(norma)"
+    "df.Pclass.value_counts(normalize=True)"
    ]
   },
   {
