--- a/index.ipynb
+++ b/index.ipynb
@@ -868,7 +868,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Pclass = "
+    "df.Pclass = df.Pclass.replace()"
    ]
   },
   {
