Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -868,7 +868,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.Pclass = df.Pclass.replace('?', 4, )"
+    "df.Pclass = df.Pclass.replace('?', 4, inplace=True)\n"
    ]
   },
   {
