Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "Series([], Name: Pclass, dtype: float64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
    "source": [
     "# Your code here\n",
     "df.Pclass = df.Pclass.replace('?', 4, inplace=True)\n",
-    "#df.Pclass.value_counts(normalize=True)"
+    "df.Pclass.value_counts(normalize=True)"
    ]
   },
   {
