Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -863,13 +863,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: Pclass, dtype: float64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "df.Pclass = df.Pclass.replace('?', 4, inplace=True)\n",
-    "#df.Pclass.value_counts(normalize=True)"
+    "df.Pclass.value_counts(normalize=True)"
    ]
   },
   {
