Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -872,14 +872,14 @@
        "Series([], Name: Pclass, dtype: float64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "df.Pclass = df.Pclass.replace('?', 4, inplace=True)\n",
+    "df.Pclass = df.Pclass.replace('?', '4', inplace=True)\n",
     "df.Pclass.value_counts(normalize=True)"
    ]
   },
