--- a/index.ipynb
+++ b/index.ipynb
@@ -863,16 +863,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], Name: Pclass, dtype: float64)"
+       "0      None\n",
+       "1      None\n",
+       "2      None\n",
+       "3      None\n",
+       "4      None\n",
+       "5      None\n",
+       "6      None\n",
+       "7      None\n",
+       "8      None\n",
+       "9      None\n",
+       "10     None\n",
+       "11     None\n",
+       "12     None\n",
+       "13     None\n",
+       "14     None\n",
+       "15     None\n",
+       "16     None\n",
+       "17     None\n",
+       "18     None\n",
+       "19     None\n",
+       "20     None\n",
+       "21     None\n",
+       "22     None\n",
+       "23     None\n",
+       "24     None\n",
+       "25     None\n",
+       "26     None\n",
+       "27     None\n",
+       "28     None\n",
+       "29     None\n",
+       "       ... \n",
+       "861    None\n",
+       "862    None\n",
+       "863    None\n",
+       "864    None\n",
+       "865    None\n",
+       "866    None\n",
+       "867    None\n",
+       "868    None\n",
+       "869    None\n",
+       "870    None\n",
+       "871    None\n",
+       "872    None\n",
+       "873    None\n",
+       "874    None\n",
+       "875    None\n",
+       "876    None\n",
+       "877    None\n",
+       "878    None\n",
+       "879    None\n",
+       "880    None\n",
+       "881    None\n",
+       "882    None\n",
+       "883    None\n",
+       "884    None\n",
+       "885    None\n",
+       "886    None\n",
+       "887    None\n",
+       "888    None\n",
+       "889    None\n",
+       "890    None\n",
+       "Name: Pclass, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +941,7 @@
    "source": [
     "# Your code here\n",
     "df.Pclass = df.Pclass.replace('?', '4', inplace=True)\n",
-    "df."
+    "df.Pclass"
    ]
   },
   {
