--- a/index.ipynb
+++ b/index.ipynb
@@ -941,7 +941,7 @@
    "source": [
     "# Your code here\n",
     "df.Pclass = df.Pclass.replace('?', '4', inplace=True)\n",
-    "df.Pclass"
+    "df.Pclass.value_counts(normalize=True)"
    ]
   },
   {
